sound + animation functions, click event listener

--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
     <div id="kit">
       <div class="set">
         <div class="pad">
-          <div onclick="boom.play()" id="pad1"></div>
+          <div id="pad1"></div>
         </div>
         <div class="pad">
-          <div onclick="clap.play()" id="pad2"></div>
+          <div id="pad2"></div>
         </div>
         <div class="pad">
-          <div onclick="hithat.play()" id="pad3"></div>
-        </div>
-      </div>
-      <div class="set">
-        <div class="pad">
-          <div onclick="kick.play()" id="pad4"></div>
-        </div>
-        <div class="pad">
-          <div onclick="openhat.play()" id="pad5"></div>
-        </div>
-        <div class="pad">
-          <div onclick="ride.play()" id="pad6"></div>
+          <div id="pad3"></div>
         </div>
       </div>
       <div class="set">
         <div class="pad">
-          <div onclick="snare.play()" id="pad7"></div>
+          <div id="pad4"></div>
         </div>
         <div class="pad">
-          <div onclick="tink.play()" id="pad8"></div>
+          <div id="pad5"></div>
         </div>
         <div class="pad">
-          <div onclick="tom.play()" id="pad9"></div>
+          <div id="pad6"></div>
+        </div>
+      </div>
+      <div class="set">
+        <div class="pad">
+          <div id="pad7"></div>
+        </div>
+        <div class="pad">
+          <div id="pad8"></div>
+        </div>
+        <div class="pad">
+          <div id="pad9"></div>
         </div>
       </div>
     </div>
-    <audio onclick="playboom()" id="boom" src="/sounds/boom.wav"></audio>
+    <audio id="boom" src="/sounds/boom.wav"></audio>
     <audio id="clap" src="/sounds/clap.wav"></audio>
     <audio id="hithat" src="/sounds/hihat.wav"></audio>
 
