--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         </div>
       </div>
     </div>
-    <audio id="boom" src="/sounds/boom.wav"></audio>
-    <audio id="clap" src="/sounds/clap.wav"></audio>
-    <audio id="hithat" src="/sounds/hihat.wav"></audio>
+    <audio id="boom" src="sounds/boom.wav"></audio>
+    <audio id="clap" src="sounds/clap.wav"></audio>
+    <audio id="hithat" src="sounds/hihat.wav"></audio>
 
-    <audio id="kick" src="/sounds/kick.wav"></audio>
-    <audio id="openhat" src="/sounds/openhat.wav"></audio>
-    <audio id="ride" src="/sounds/ride.wav"></audio>
+    <audio id="kick" src="sounds/kick.wav"></audio>
+    <audio id="openhat" src="sounds/openhat.wav"></audio>
+    <audio id="ride" src="sounds/ride.wav"></audio>
 
-    <audio id="snare" src="/sounds/snare.wav"></audio>
-    <audio id="tink" src="/sounds/tink.wav"></audio>
-    <audio id="tom" src="/sounds/tom.wav"></audio>
+    <audio id="snare" src="sounds/snare.wav"></audio>
+    <audio id="tink" src="sounds/tink.wav"></audio>
+    <audio id="tom" src="sounds/tom.wav"></audio>
 
     <script src="app.js"></script>
   </body>
