--- a/index.html
+++ b/index.html
@@ -10,39 +10,64 @@
   <body>
     <div id="kit">
       <div class="set">
+
+        <h1>Boom</h1>
         <div class="pad">
           <div id="pad1"></div>
         </div>
+
+        <h1>Clap</h1>
         <div class="pad">
           <div id="pad2"></div>
         </div>
+
+        <h1>hithat</h1>
         <div class="pad">
           <div id="pad3"></div>
         </div>
+
       </div>
+
       <div class="set">
+
+        <h1>Kick</h1>
         <div class="pad">
           <div id="pad4"></div>
         </div>
+
+        <h1>open hat</h1>
         <div class="pad">
           <div id="pad5"></div>
         </div>
+
+        <h1>Ride</h1>
         <div class="pad">
           <div id="pad6"></div>
         </div>
+
       </div>
+
       <div class="set">
+        
+        <h1>Snare</h1>
         <div class="pad">
           <div id="pad7"></div>
         </div>
+
+        <h1>Tink</h1>
         <div class="pad">
           <div id="pad8"></div>
         </div>
+
+        <h1>Tom</h1>
         <div class="pad">
           <div id="pad9"></div>
         </div>
+
       </div>
+
     </div>
+
     <audio id="boom" src="sounds/boom.wav"></audio>
     <audio id="clap" src="sounds/clap.wav"></audio>
     <audio id="hithat" src="sounds/hihat.wav"></audio>
