formatted cleaned up code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <div id="kit">
       <div class="set">
-
         <h1>Boom</h1>
         <div class="pad">
           <div id="pad1"></div>
@@ -21,21 +20,19 @@
           <div id="pad2"></div>
         </div>
 
-        <h1>hithat</h1>
+        <h1>Hi-Hat</h1>
         <div class="pad">
           <div id="pad3"></div>
         </div>
-
       </div>
 
       <div class="set">
-
         <h1>Kick</h1>
         <div class="pad">
           <div id="pad4"></div>
         </div>
 
-        <h1>open hat</h1>
+        <h1>Open-Hat</h1>
         <div class="pad">
           <div id="pad5"></div>
         </div>
@@ -44,11 +41,9 @@
         <div class="pad">
           <div id="pad6"></div>
         </div>
-
       </div>
 
       <div class="set">
-        
         <h1>Snare</h1>
         <div class="pad">
           <div id="pad7"></div>
@@ -63,9 +58,7 @@
         <div class="pad">
           <div id="pad9"></div>
         </div>
-
       </div>
-
     </div>
 
     <audio id="boom" src="sounds/boom.wav"></audio>
