labels, finished hovers

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <div id="kit">
       <div class="set">
         <h1>Boom</h1>
+        <p>key A</p>
         <div class="pad">
           <div id="pad1"></div>
         </div>
 
         <h1>Clap</h1>
+        <p>key S</p>
         <div class="pad">
           <div id="pad2"></div>
         </div>
 
         <h1>Hi-Hat</h1>
+        <p>key D</p>
         <div class="pad">
           <div id="pad3"></div>
         </div>
@@ -28,16 +31,19 @@
 
       <div class="set">
         <h1>Kick</h1>
+        <p>key F</p>
         <div class="pad">
           <div id="pad4"></div>
         </div>
 
         <h1>Open-Hat</h1>
+        <p>key G</p>
         <div class="pad">
           <div id="pad5"></div>
         </div>
 
         <h1>Ride</h1>
+        <p>key H</p>
         <div class="pad">
           <div id="pad6"></div>
         </div>
@@ -45,16 +51,19 @@
 
       <div class="set">
         <h1>Snare</h1>
+        <p>key J</p>
         <div class="pad">
           <div id="pad7"></div>
         </div>
 
         <h1>Tink</h1>
+        <p>key K</p>
         <div class="pad">
           <div id="pad8"></div>
         </div>
 
         <h1>Tom</h1>
+        <p>key L</p>
         <div class="pad">
           <div id="pad9"></div>
         </div>
