.noselect to p tag

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div id="kit">
       <div class="set">
         <h1>Boom</h1>
-        <p>key A</p>
+        <p class="noselect">Key A</p>
         <div class="pad">
           <div id="pad1"></div>
         </div>
 
         <h1>Clap</h1>
-        <p>key S</p>
+        <p class="noselect">Key S</p>
         <div class="pad">
           <div id="pad2"></div>
         </div>
 
         <h1>Hi-Hat</h1>
-        <p>key D</p>
+        <p class="noselect">Key D</p>
         <div class="pad">
           <div id="pad3"></div>
         </div>
@@ -31,19 +31,19 @@
 
       <div class="set">
         <h1>Kick</h1>
-        <p>key F</p>
+        <p class="noselect">Key F</p>
         <div class="pad">
           <div id="pad4"></div>
         </div>
 
         <h1>Open-Hat</h1>
-        <p>key G</p>
+        <p class="noselect">Key G</p>
         <div class="pad">
           <div id="pad5"></div>
         </div>
 
         <h1>Ride</h1>
-        <p>key H</p>
+        <p class="noselect">Key H</p>
         <div class="pad">
           <div id="pad6"></div>
         </div>
@@ -51,19 +51,19 @@
 
       <div class="set">
         <h1>Snare</h1>
-        <p>key J</p>
+        <p class="noselect">Key J</p>
         <div class="pad">
           <div id="pad7"></div>
         </div>
 
         <h1>Tink</h1>
-        <p>key K</p>
+        <p class="noselect">Key K</p>
         <div class="pad">
           <div id="pad8"></div>
         </div>
 
         <h1>Tom</h1>
-        <p>key L</p>
+        <p class="noselect">Key L</p>
         <div class="pad">
           <div id="pad9"></div>
         </div>
